<resources>
    <string name="app_name">PHR-Application</string>
    <string name="get_the_bes">
        Get the Best \nMedical Service
</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sed placerat est.
    </string>

    <string name="bpm">
        96 bpm
    </string>

    <string name="heart_rate">
        Heart Rate
    </string>

    <string name="schedule">
        Schedule
    </string>

    <string name="payment_met">
        Payment Method
    </string>

    <string name="available_b">
        Available balance
    </string>

    <string name="value">
        $3,578.99
    </string>

    <string name="card_number">
        1234 5678 9012 3456
    </string>

    <string name="select_opti">
        Select Option
    </string>
    <string name="cont">
        Continue
    </string>

    <string name="dr_maria_st">
    Dr. Maria Stone
</string>

</resources>